fix code on safari on mobile

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -295,7 +295,8 @@ p > a:visited {
   position: relative;
   width: 100%;
   margin: 0;
-  padding-block: var(--padding-block);
+  padding-top: var(--padding-block);
+  padding-bottom: var(--padding-block);
   filter: brightness(0.95);
 }
 
